--- a/nablaweb/templates/com/com_details.html
+++ b/nablaweb/templates/com/com_details.html
@@ -2,7 +2,7 @@
 {% load mediawiki_links %}
 {% load markup %}
 
-{% block title %}}{{ com.com.name }}{% endblock %}
+{% block title %}{{ com.com.name }}{% endblock %}
 
 {% block content %}
 <h2>{{ com.com.name }}</h2>
