--- a/static/pybb.css
+++ b/static/pybb.css
@@ -1,5 +1,113 @@
-/* CSS-fil for pybbm. Avhenger av at PYBB_ENABLE_SELF_CSS i config er satt til true. */
+/* CSS-fil for pybbm. */
+
+/* Delvis kopiert fra bootstrap.css. */
 
 h1 {
-    color: red;
+    margin-bottom: 15px;
+}
+
+ul.breadcrumb {
+    margin-top: 15px;
+}
+
+table {
+  max-width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+div.span8 table {
+  width: 100%;
+  margin-bottom: 18px;
+}
+div.span8 table th,
+div.span8 table td {
+  padding: 8px;
+  line-height: 18px;
+  text-align: left;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
+div.span8 table th {
+  font-weight: bold;
+}
+div.span8 table thead th {
+  vertical-align: bottom;
+}
+div.span8 table thead:first-child tr th,
+div.span8 table thead:first-child tr td {
+  border-top: 0;
+}
+div.span8 table tbody + tbody {
+  border-top: 2px solid #ddd;
+}
+
+div.span8 table tbody tr:nth-child(odd) td,
+div.span8 table tbody tr:nth-child(odd) th {
+  background-color: #f9f9f9;
+}
+
+div.span8 table tbody tr:hover td,
+div.span8 table tbody tr:hover th {
+  background-color: #f5f5f5;
+}
+table .span1 {
+  float: none;
+  width: 44px;
+  margin-left: 0;
+}
+table .span2 {
+  float: none;
+  width: 124px;
+  margin-left: 0;
+}
+table .span3 {
+  float: none;
+  width: 204px;
+  margin-left: 0;
+}
+table .span4 {
+  float: none;
+  width: 284px;
+  margin-left: 0;
+}
+
+table .span5 {
+  float: none;
+  width: 364px;
+  margin-left: 0;
+}
+table .span6 {
+  float: none;
+  width: 444px;
+  margin-left: 0;
+}
+table .span7 {
+  float: none;
+  width: 524px;
+  margin-left: 0;
+}
+table .span8 {
+  float: none;
+  width: 604px;
+  margin-left: 0;
+}
+table .span9 {
+  float: none;
+  width: 684px;
+  margin-left: 0;
+}
+table .span10 {
+  float: none;
+  width: 764px;
+  margin-left: 0;
+}
+table .span11 {
+  float: none;
+  width: 844px;
+  margin-left: 0;
+}
+table .span12 {
+  float: none;
+  width: 924px;
+  margin-left: 0;
 }
