--- a/static/pybb.css
+++ b/static/pybb.css
@@ -3,7 +3,9 @@
 /* Delvis kopiert fra bootstrap.css. */
 
 h1 {
-    margin-bottom: 15px;
+/*    margin-bottom: 15px; */
+    font-size: 24px;
+    line-height: 36px;
 }
 
 ul.breadcrumb {
