Brukere kan nå se hvor mange og hvilke prikker de har fått. La også til en del relaterte ting til templates.
fix #8

--- a/nablaweb/templates/events/event_list.html
+++ b/nablaweb/templates/events/event_list.html
@@ -111,7 +111,12 @@
             <p>Om du er påmeldt, men ikke møter opp på arrangement, kan du bli
             straffet i form av prikker. Jo flere prikker, jo lengre må du vente for
             å melde deg på et arrangement.</p>
-            <p>Du har ingen prikker. Godt jobbet! (PS: Denne er ikke dynamisk)</p>
+            {% if penalty_list %}
+            <p>Du har {{ penalty_list|length }} prikk{{ penalty_list|length|pluralize:"er" }}:</p>
+            <ul>{% for penalty in penalty_list %}<li>{{ penalty.get_display_name }}</li>{% endfor %}</ul>
+            {% else %}
+            <p>Du har ingen prikker. Godt jobbet!</p>
+            {% endif %}
         </div>
 
         <div class="span4">
