--- a/nablaweb/templates/events/event_showuser.html
+++ b/nablaweb/templates/events/event_showuser.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 
-<h2>{{ user.username }}</h2><br/>
+<h2>Påmeldte arrangementer og prikker ({{ user.username }})</h2>
 
 {% if eventregistration_list %}
-Påmeldt:
-<table>
+<p>Påmeldt:</p>
+<table class="table">
+  <tbody>
   {% for eventregistration in eventregistration_list %}
   <tr>
     {% if eventregistration.is_attending_place %}
@@ -18,14 +19,15 @@ Påmeldt:
     </td>
   </tr>
   {% endfor %}
+  </tbody>
 </table>
 {% endif %}
 
-Du har {{ penalty_list|length }} prikk{{ penalty_list|length|pluralize:"er" }}.
+<p>Du har {{ penalty_list|length }} prikk{{ penalty_list|length|pluralize:"er" }}.</p>
 {% if penalty_list %}
 <ul>
 {% for penalty in penalty_list %}
-<li><a href="{{ penalty.event.id }}"/>{{ penalty }}</a></li>
+<li><a href="{{ penalty.event.id }}"/>{{ penalty.get_display_name }}</a></li>
 {% endfor %}
 </ul>
 {% endif %}
