--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -12,6 +12,7 @@
           content="Hjemmesiden til linjeforeningen Nabla, for studentene på 
                    fysikk og matematikk-masterprogrammet på NTNU.">
     <meta name="author" content="Nabla">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Styles -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet"><!-- Generated with LESS -->
