La til RSS-feeds for bare events og jobs.
fix #38

--- a/nablaweb/templates/events/event_list.html
+++ b/nablaweb/templates/events/event_list.html
@@ -3,7 +3,7 @@
 {% block title %}Arrangement{% endblock %}
 
 {% block more_head %}
-<link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
+<link rel="alternate" type="application/rss+xml" href="/arrangement/feed/" title="RSS feed">
 {% endblock %}
 
 {% block main %}
