--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -4,7 +4,7 @@
 {% block title %}Stillingsannonser{% endblock %}
 
 {% block more_head %}
-<link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
+<link rel="alternate" type="application/rss+xml" href="/stillinger/feed/" title="RSS feed">
 {% endblock %}
 
 {% block sidebar %}
