Hvis man allerede har stemt ser man nå et bardiagram, som er laget 100% med CSS. Fikset også noen småfeil i pollen.
Tror den er ferdig nå.

--- a/nablaweb/templates/news/poll_include.html
+++ b/nablaweb/templates/news/poll_include.html
@@ -2,6 +2,19 @@
 
 {% if poll %}
 
+{% if user in poll.users_voted.all %}
+
+<h3>{{ poll.question }}</h3>
+
+<ul class="bargraph">
+{% for choice in poll.choice_set.all %}
+    <li><span style="width: {% widthratio choice.votes poll.get_total_votes 190 %}px">{{ choice.choice }} &ndash; {{ choice.votes|add:"0" }} stemmer</span></li>
+{% endfor %}
+<li>Totalt {{ poll.get_total_votes }} stemmer.</li>
+</ul>
+
+{% else %}
+
 <h3>{{ poll.question }}</h3>
 
 <form action="/poll/{{ poll.id }}/vote/" method="post">{% csrf_token %}
@@ -17,5 +30,7 @@
 </div>
 </fieldset>
 </form>
+
+{% endif %}
 
 {% endif %}
