La til søk med Haystack/Whoosh for news(/events/jobs).
Krever Haystack 2.0.0 beta og Whoosh. Instruksjoner for hvordan man
installerer Haystack-betaen finnes på haystacksearch.org.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -91,6 +91,7 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" >
+                        <li><a href="{% url haystack_search %}">Søk</a></li>
                         <li><a href="{% url quote_list %}">Gullkorn</a></li>
                         <li><a href="{% url irc %}">#nabla på IRC</a></li>
                         <li><a href="{% url gallery.views.index %}">Galleri</a></li>
