--- a/nablaweb/templates/jobs/info_include.html
+++ b/nablaweb/templates/jobs/info_include.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% load jobs_filters %}
 
 <h3>Informasjon</h3>
 <table class="table table-bordered table-striped content-info">
@@ -12,17 +13,20 @@
     </tr>
 
     <tr><td><ul>
-    <li><a href="{{ job.company.website }}">Nettside</a></li>
+    {% if job.company.website %}<li><a href="{{ job.company.website }}">Nettside</a></li>{% endif %}
     <li><a href="{% url company_detail job.company.id "" %}">Alle stillingsannonser</a></li>
     </ul></td></tr>
 
+    {% if job.relevant_for_group and job.relevant_for_year %}
     <tr>
         <td>Relevant for</td>
         <td>
-            {{ job.relevant_for_group.all|join:", " }} (årskull {{ job.relevant_for_year.all|join:", " }})
+            {{ job.relevant_for_group.all|commas_no }} (årskull {{ job.relevant_for_year.all|commas_no }})
         </td>
     </tr>
-
+    {% endif %}
+    
+    {% if job.deadline_date %}
     <tr>
         <td>Søkefrist</td>
         <td>
@@ -31,5 +35,6 @@
             </time>
         </td>
     </tr>
+    {% endif %}
 
 </table>
