--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load markup %}
+{% load jobs_filters %}
 
 {% block title %}Stillingsannonser{% endblock %}
 
@@ -18,18 +19,23 @@
             <div class="span8">
                 <table class="table jobslist_table">
                 <tbody>
+                    {% if job.deadline_date %}
                     <tr>
                         <td class="jobslist_td_title">Søknadsfrist</td>
                         <td class="jobslist_td_content">{{ job.deadline_date|date:"d. F Y, H:i" }}</td>
                     </tr>
+                    {% endif %}
                     <tr>
                         <td class="jobslist_td_title">Lagt inn</td>
                         <td>{{ job.created_date|date:"d. F Y, H:i" }}</td>
                     </tr>
+                    {% if job.relevant_for_group or job.relevant_for_year %}
                     <tr>
                         <td class="jobslist_td_title">Relevant for</td>
-                        <td>{{ job.relevant_for_group.all|join:", " }}. Årskull {{ job.relevant_for_year.all|join:", " }}.</td>
+                        <td>{% if job.relevant_for_group %}{{ job.relevant_for_group.all|commas_no }}{% endif %}. 
+                        {% if job.relevant_for_year %}Årskull {{ job.relevant_for_year.all|commas_no }}.{% endif %}</td>
                     </tr>
+                    {% endif %}
                 </tbody>
                 </table>
                 <h2>{{ job.headline }} hos <a href="{{job.company.get_absolute_url }}">{{ job.company.name }}</a></h2>
