Endret ting slik at get_full_name vises ved dropdownmenyen for brukeren.
Prøvd å fikse #65, se om det funker.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -156,7 +156,7 @@
                     <a href="#bruker"
                         class="dropdown-toggle no-ajaxy"
                         data-toggle="dropdown">
-                        <span class="icon-user"></span> {{ user.username }}
+                        <span class="icon-user"></span>{% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{% endif %}
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
