--- a/nablaweb/templates/content/includes/meta.html
+++ b/nablaweb/templates/content/includes/meta.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% load l10n %}
 
 <h3>Meta</h3>
 <table class="table table-condensed content-info">
@@ -33,7 +34,7 @@
         <td>Sist endret</td>
         <td>
             <time datetime="{{ content.last_changed_date|date:"c" }}">
-                {{ content.last_changed_date|naturalday }} kl. {{ content.last_changed_date|date:"H:i" }}
+                {{ content.last_changed_date|naturalday|localize }} kl. {{ content.last_changed_date|date:"H:i" }}
             </time>
         </td>
     </tr>
