--- a/nablaweb/templates/events/event_list.html
+++ b/nablaweb/templates/events/event_list.html
@@ -108,7 +108,7 @@
 
         <div class="span4">
             <h2>Prikker</h2>
-            <p>Om du er påmeldt, men ikke møter opp på arrangement, kan du bli
+            <p>Om du har plass, men ikke møter opp på et arrangement, kan du bli
             straffet i form av prikker. Jo flere prikker, jo lengre må du vente for
             å melde deg på et arrangement.</p>
             {% if penalty_list %}
@@ -120,7 +120,10 @@
         </div>
 
         <div class="span4">
-            <h2>Masse plass</h2> 
+            <h2>Venteliste</h2> 
+            <p>Melder du deg på et fullbooket arrangement, blir du satt på venteliste.
+            Blir det ledige plasser, går de til dem som har ventet lengst.</p>
+            <p>Husk at du kan få prikker for en plass du har fått via venteliste.
         </div>
 
     {% else %}
