Nå sier event_detail om man er på venteliste / fix #69
Men jeg har ikke testet hvordan dette fungerer for
bedriftspresentasjoner, på grunn av manglende test-bedpreser.

--- a/nablaweb/templates/events/includes/info.html
+++ b/nablaweb/templates/events/includes/info.html
@@ -45,7 +45,11 @@
         <td style="text-align: center;" colspan="2">
             {% if event.registration_required %}
                 {% if is_registered %}
-                    Du er påmeldt
+                    {% if eventregistration.is_waiting_place %}
+                        Du er på venteliste
+                    {% else %}
+                        Du er påmeldt
+                    {% endif %}
                 {% else %}
                     Påmelding kreves
                 {% endif %}
