Oppdatert Bootstrap til v.2.1.1 / fix #66
Jeg har funnet at det blir lettere for oss om vi går over til
ferdigkompilert Bootstrap. npm, nodejs m.fl. oppførte seg ikke veldig
fint når jeg prøvde å kjøre make. Vi mister muligheten til å enkelt
endre farger med en variabelfil, men til gjengjeld slipper vi mye styr,
og det blir enkelt å oppgradere i fremtiden.

Inntil videre forblir menyen litt teit og standard, men det skal jeg
fikse.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -15,8 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Styles -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet"><!-- Generated with LESS -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet"><!-- Generated with LESS -->
+    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet"><!-- Generated with LESS -->
+    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet"><!-- Generated with LESS -->
     <link href="{{ STATIC_URL }}css/default.css" rel="stylesheet"><!-- Site specific, except for variables -->
 
     <!-- HTML5 shim, for IE6-8 support for HTML elements -->
@@ -359,7 +359,7 @@
 
 
 <!-- Bootstrap. Det er mulig å velge kun komponenter som skal brukes -->
-<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
+<script src="{{ STATIC_URL }}js/bootstrap.js"></script>
 
 <!-- History.js -->
 {# Skaper krøll med Django Toolbar #} 
