--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -15,8 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Styles -->
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet"><!-- Generated with LESS -->
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet"><!-- Generated with LESS -->
+    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
+    <!--<link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">-->
     <link href="{{ STATIC_URL }}css/default.css" rel="stylesheet"><!-- Site specific, except for variables -->
 
     <!-- HTML5 shim, for IE6-8 support for HTML elements -->
@@ -60,24 +60,18 @@
 
 <header>
     <div class="page-header">
-    <a href="/"><img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla"></a>
-    <div class="span4">
-        <div class="control-group">
-            <div class="controls">
-                <div class="input-prepend">
-                    <form class="input-append" method="get" action="/search/" id="search">
-                        <span class="headersearch">
-                        <input placeholder="Søk" name="q" id="searchtop"/>
-                        <button class="btn add-on" type="submit">
-                            <i class="icon-search"></i>
-                        </button>
-                        </span>
-                    </form>
-                </div>
+        <a class="pull-left" href="/">
+            <img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla">
+        </a>
+
+        <form id="searchtop" class="pull-right form-search" method="get" action="/search/">
+            <div class="input-append">
+                <input name="q" placeholder="Søk..." type="text" class="span2 search-query">
+                <button type="submit" class="btn">
+                    <i class="icon-search"></i> 
+                </button>
             </div>
-        </div>
-    </div>
-    </div>
+        </form>
 </header>
 
 
