--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -15,9 +15,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Styles -->
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet"><!--Dont modify-->
     <!--<link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">-->
-    <link href="{{ STATIC_URL }}css/default.css" rel="stylesheet"><!-- Site specific, except for variables -->
+    <link href="{{ STATIC_URL }}css/default.css" rel="stylesheet"><!-- Modify this instead -->
 
     <!-- HTML5 shim, for IE6-8 support for HTML elements -->
     <!--[if lt IE 9]>
