Google har funnet testserveren; lagt til notis om betaversjon.

--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -55,7 +55,13 @@
 
 <h3>Om Nabla</h3>
 
-<p>Nabla er linjeforeningen for sivilingeniørprogrammet <b>Fysikk og matematikk</b> på NTNU. Du kan lese mer om studiet på <a href="http://www.ntnu.no/studier/mtfyma">NTNU sine nettsider</a>. På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva som foregår.</p>
+<p>Nabla er linjeforeningen for sivilingeniørprogrammet <b>Fysikk og
+    matematikk</b> på NTNU. Du kan lese mer om studiet på 
+<a href="http://www.ntnu.no/studier/mtfyma">NTNU sine nettsider</a>. 
+På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva
+som foregår.</p>
+
+<p>Dette er en <b>beta</b>-versjon av nettsiden, og er kun tilgjengelig for utviklerne. Du ser kanskje etter <a href="http://nabla.no/">Nabla.no</a>?</p>
 
 {% if upcoming_events %}
 
