--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -13,6 +13,7 @@
                    fysikk og matematikk-masterprogrammet på NTNU.">
     <meta name="author" content="Nabla">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
 
     <!-- Styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet"><!--Dont modify-->
