--- a/nablaweb/templates/jobs/info_include.html
+++ b/nablaweb/templates/jobs/info_include.html
@@ -6,16 +6,22 @@
 
     <!-- Fra -->
     <tr>
-        <td>Bedrift</td>
+        <td style="width:35%;">Bedrift</td>
         <td>
             <strong>{{ job.company.name }}</strong>
         </td>
     </tr>
 
-    <tr><td><ul>
-    {% if job.company.website %}<li><a href="{{ job.company.website }}">Nettside</a></li>{% endif %}
-    <li><a href="{% url company_detail job.company.id "" %}">Alle stillingsannonser</a></li>
-    </ul></td></tr>
+    <tr>
+        <td colspan="2">
+            <ul style="margin-bottom:0;">
+                {% if job.company.website %}
+                <li><a href="{{ job.company.website }}">Nettside</a></li>
+                {% endif %}
+                <li><a href="{% url company_detail job.company.id "" %}">Alle stillingsannonser</a></li>
+            </ul>
+        </td>
+    </tr>
 
     {% if job.relevant_for_group and job.relevant_for_year %}
     <tr>
@@ -31,7 +37,7 @@
         <td>Søkefrist</td>
         <td>
             <time datetime="{{ job.deadline_date|date:"c" }}">
-                <strong>{{ job.deadline_date|naturalday }} kl. {{ job.deadline_date|date:"H:i" }}<strong>
+                <strong>{{ job.deadline_date|naturalday }} kl. {{ job.deadline_date|date:"H:i" }}</strong>
             </time>
         </td>
     </tr>
