--- a/nablaweb/templates/jobs/jobs_detail.html
+++ b/nablaweb/templates/jobs/jobs_detail.html
@@ -34,8 +34,8 @@
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
-        <li><a href="{% url admin:jobs_advert_change job.id %}}"><i class="icon-pencil"></i> Endre</a></li>
-        <li><a href="{% url admin:jobs_advert_delete job.id %} "><i class="icon-trash"></i> Slett</a></li>
+        <li><a href="{% url admin:jobs_advert_change job.id %}"><i class="icon-pencil"></i> Endre</a></li>
+        <li><a href="{% url admin:jobs_advert_delete job.id %}"><i class="icon-trash"></i> Slett</a></li>
     </ul>
 </div>
 {% endif %}
