Gjort metainformasjonen finere

--- a/nablaweb/templates/content/includes/meta.html
+++ b/nablaweb/templates/content/includes/meta.html
@@ -7,7 +7,7 @@
 
     <!-- Publisert -->
     <tr>
-        <td>Publisert</td>
+        <td style="width:35%;">Publisert</td>
         <td>
             <time datetime="{{ content.created_date|date:"c" }}">
                 {{ content.created_date|naturalday }} kl. {{ content.created_date|date:"H:i" }}
