--- a/nablaweb/templates/nabladet/nablad_detail.html
+++ b/nablaweb/templates/nabladet/nablad_detail.html
@@ -55,7 +55,20 @@
 
 <br>
 
+<h3>Arkiv</h3>
+<table class="table table-striped">
+{% for n in nablad_list %}
+<tr><td>
+    {% if n == nablad %}
+    {{ n.pub_date|date:"F Y" }}
+    {% else %}
+    <a href="{{ n.get_absolute_url }}"> {{ n.pub_date|date:"F Y" }} </a>
+    {% endif %}
+</td></tr>
+{% endfor %}
+</table>
 
+{% if user.is_staff %}
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
@@ -63,5 +76,6 @@
         <li><a href="{% url admin:nabladet_nablad_delete nablad.id %}"><i class="icon-trash"></i> Slett</a></li>
     </ul>
 </div>
+{% endif %}
 
 {% endblock %}
