--- a/nablaweb/templates/accounts/edit_profile.html
+++ b/nablaweb/templates/accounts/edit_profile.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
-{% load avatar_tags %}
+{% load thumbnail %}
 {% block title %}Endre bruker {% endblock %}
 
 {% block content %} 
 <div class="row">
     <div class="span2 centertext">
         <div class="thumbnail">
-            {% avatar user 140 %}
+            <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" width = "150" height ="150" >
         </div>
-            <a class="btn" style="margin-top: 5px;" href="/avatar/change/">Endre profilbilde</a>
     </div>
 
     <div class="span6">
