--- a/nablaweb/templates/accounts/view_member_profile.html
+++ b/nablaweb/templates/accounts/view_member_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load avatar_tags %}
+{% load thumbnail %}
 {% load markup %}
 {% load mediawiki_links %}
 
@@ -11,7 +11,8 @@
 <div class="row">
     <div class="span2">
         <div class="thumbnail">
-            {% avatar member 140 %}
+            <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" 
+              width = "150" height ="150" >
         </div>
     </div>
     <div class="span6">
