--- a/nablaweb/templates/comments/preview.html
+++ b/nablaweb/templates/comments/preview.html
@@ -13,8 +13,7 @@
         <div class="row comment" id="c{{ comment.id }}">
 
             <div class="avatar span1">
-                {% load avatar_tags %}
-                {% avatar user.username 60 %}
+                <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" width = "150" height ="150" >
             </div>
 
             <div class="span7">
