Fikset opplastingen av avatar.

--- a/nablaweb/templates/accounts/edit_profile.html
+++ b/nablaweb/templates/accounts/edit_profile.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="span6">
-        <form action="" method="post">{% csrf_token %}
+        <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
 
             <table>
                 {{ userForm.as_table }}
